<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home"
            android:iconTint="#6200EA"
            android:title="@string/home"
            tools:targetApi="o" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_baseline_contact_support"
            android:iconTint="#6200EA"
            android:title="@string/contact_us"
            tools:targetApi="o" />

        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_baseline_star_rate"
            android:iconTint="#6200EA"
            android:title="@string/rate_app"
            tools:targetApi="o" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_baseline_share"
            android:iconTint="#6200EA"
            android:title="@string/share_app"
            tools:targetApi="o" />

        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/ic_baseline_privacy"
            android:iconTint="#6200EA"
            android:title="@string/privacy_policy"
            tools:targetApi="o" />

    </group>

</menu>