<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".activities.HomeActivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        app:headerLayout="@layout/header"
        app:itemIconPadding="14dp"
        app:menu="@menu/menu">

        <TextView
            android:id="@+id/version_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:padding="13sp"
            android:text="@string/version_1_1"
            android:textAlignment="center"
            android:textColor="@color/black" />
    </com.google.android.material.navigation.NavigationView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/no_internet"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="no_internet.json"
            app:lottie_loop="true" />




            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="match_parent"
                android:layout_height="56sp"
                android:layout_marginTop="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:gravity="center"
                    android:minHeight="?actionBarSize"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/nav_menu"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/nav_menu"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:minHeight="?actionBarSize"
                    android:background="@drawable/bg"
                    android:elevation="6dp"
                    android:padding="13sp"
                    android:src="@drawable/ic_baseline_menu_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/title"
                    app:tint="@color/black"
                    android:contentDescription="@string/todo" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottie_email"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="16dp"
                    android:elevation="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="email.json"
                    app:lottie_loop="true" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cat_item_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />


                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:cardCornerRadius="20dp"
                    android:layout_margin="12dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/purple_500"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/splash"
                            android:contentDescription="@string/todo" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/result"
                    android:layout_width="match_parent"
                    android:layout_height="95dp"
                    android:layout_margin="12dp"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="8dp"
                    android:backgroundTint="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/result"
                            android:textColor="@color/black"
                            android:textSize="23sp"
                            android:gravity="center"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/aro"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/aro"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/bg"
                            android:elevation="6dp"
                            android:minHeight="?actionBarSize"
                            android:padding="13sp"
                            android:layout_marginEnd="15sp"
                            android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/black"
                            android:contentDescription="@string/todo" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/news"
                    android:layout_width="match_parent"
                    android:layout_height="95dp"
                    android:layout_margin="12dp"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="8dp"
                    android:backgroundTint="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/news"
                            android:textColor="@color/black"
                            android:textSize="23sp"
                            android:gravity="center"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/aro2"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/aro2"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/bg"
                            android:elevation="6dp"
                            android:minHeight="?actionBarSize"
                            android:padding="13sp"
                            android:layout_marginEnd="15sp"
                            android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/black"
                            android:contentDescription="@string/todo" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/guessing"
                    android:layout_width="match_parent"
                    android:layout_height="95dp"
                    android:layout_margin="12dp"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="8dp"
                    android:backgroundTint="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/guessing"
                            android:textColor="@color/black"
                            android:textSize="23sp"
                            android:gravity="center"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/aro3"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/aro3"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/bg"
                            android:elevation="6dp"
                            android:minHeight="?actionBarSize"
                            android:padding="13sp"
                            android:layout_marginEnd="15sp"
                            android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/black"
                            android:contentDescription="@string/todo" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/chart"
                    android:layout_width="match_parent"
                    android:layout_height="95dp"
                    android:layout_margin="12dp"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="8dp"
                    android:backgroundTint="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/chart"
                            android:textColor="@color/black"
                            android:textSize="23sp"
                            android:gravity="center"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/aro4"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/aro4"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/bg"
                            android:elevation="6dp"
                            android:minHeight="?actionBarSize"
                            android:padding="13sp"
                            android:layout_marginEnd="15sp"
                            android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/black"
                            android:contentDescription="@string/todo" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>
        </ScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>