<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ResultActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:minHeight="?actionBarSize"
            android:text="@string/result"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bg"
            android:elevation="6dp"
            android:minHeight="?actionBarSize"
            android:padding="13sp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title"
            android:contentDescription="@string/todo"
            app:tint="@color/black" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_email"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="email.json"
            app:lottie_loop="true" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/today_result"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="30sp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/today_result"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:gravity="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/aro4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/aro4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/bg"
                android:elevation="6dp"
                android:minHeight="?actionBarSize"
                android:padding="13sp"
                android:layout_marginEnd="15sp"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black"
                android:contentDescription="@string/todo" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/all_result"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_margin="12dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_result">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:gravity="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/aro"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/aro"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/bg"
                android:elevation="6dp"
                android:minHeight="?actionBarSize"
                android:padding="13sp"
                android:layout_marginEnd="15sp"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black"
                android:contentDescription="@string/todo" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>